fix(Loader): z-index of loader git

--- a/src/App/Main/style.css
+++ b/src/App/Main/style.css
@@ -7,6 +7,6 @@
   margin-left: 35px;
   margin-right: 35px;
   padding-top: 100px;
-
+  height: 0;
   .content {}
 }
