--- a/src/components/Chunk/style.css
+++ b/src/components/Chunk/style.css
@@ -2,7 +2,9 @@
   background-color: white;
   bottom: 0;
   left: 0;
+  overflow: hidden;
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 2;
 }
